--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "dist/server.js",
     "scripts": {
-        "dev": "ts-node-dev -r tsconfig-paths/register src/server.ts",
+        "dev": "nodemon",
         "build": "tsc",
         "start": "node dist/server.js",
         "proto:gen": "sh proto-gen.sh"
